--- a/public/less/style.less
+++ b/public/less/style.less
@@ -291,3 +291,7 @@ ul.settings {
 		margin-top: 2% !important;
 	}
 }
+
+a[href="#"] {
+	-webkit-touch-callout: none;
+}
